:apple: Correct font-weight problem on Safari

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -20,6 +20,8 @@ body {
 
 * {
   font-family: 'Helvetica', sans-serif;
+  font-weight: bold;
+  font-style: normal;
 }
 
 p {
